fix: leitura de termos de uso